# ROS_Cartpole_Simulation

./: README.md
cartpole_urdf/: CMakeLists.txt  package.xml
cartpole_urdf/launch/: cartpole.launch  myworld.launch  spawn_cartpole.launch  spawn_ruler.launch  spawn_urdf.launch
cartpole_urdf/meshes/: CP_ruler.STL  CP_ruler_cut.STL  CP_ruler_ext.STL
cartpole_urdf/rviz_config/: cp.rviz
cartpole_urdf/urdf/: cartpole.urdf  cp_ruler.urdf
cp_controller/: CMakeLists.txt  package.xml
cp_controller/config/: joint_names.yaml  my_robot_control.yaml
cp_controller/include/cp_controller/: FSM_data.h  QP_controller.h
cp_controller/launch/: my_robot_control.launch
cp_controller/src/: FSM_data.cpp  LQR_solver.cpp  QP_controller.cpp  oe  output_executable
cp_hardware_interface/: CMakeLists.txt  package.xml
cp_hardware_interface/include/cp_hardware_interface/: cp_hardware_interface.hpp
cp_hardware_interface/src/: cp_hardware_interface.cpp  cp_hardware_interface_node.cpp
simplebox/: CMakeLists.txt  package.xml
simplebox/config/: sbox.rviz
simplebox/launch/: sbox.launch  spawn_sbox.launch  spawn_urdf.launch
simplebox/urdf/: sbox.urdf
